Bugfix z-index of comments caused them to show through header.

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -57,6 +57,7 @@ table {
     padding: 0 5px;
     position: relative;
     margin: 5px 5px 10px 10px;
+    z-index: -3;
 
     &:before {
         content: ' ';
